fix button wrapping for mobile

--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -196,7 +196,6 @@ a {
 .btn {
   display: inline-block;
   text-align: center;
-  white-space: nowrap;
   vertical-align: middle;
   background-image: none;
   border: 1px solid transparent;
